Closest goal robot

--- a/robot.html
+++ b/robot.html
@@ -7,7 +7,8 @@
     <script src="src/animatevillage.js"></script>
     <script src="proj/robot.js"></script>
     <script>const doAnimation = () => {
-      compareRobots('Goal Oriented Robot', goalOrientedRobot, [],'Pick-up Drop-off Robot', pickUpDropOffRobot, []);
+      compareRobots('Pick-up Drop-off Robot', pickUpDropOffRobot, [], 'Closest Goal Robot', closestGoalRobot, []);
+      //compareRobots('Goal Oriented Robot', goalOrientedRobot, [],'Pick-up Drop-off Robot', pickUpDropOffRobot, []);
       //compareRobots('Route Robot', routeRobot, [], 'Goal Oriented Robot', goalOrientedRobot, []);
       //runRobotAnimation(VillageState.random(),
       //              goalOrientedRobot, []);
